Prepares an html with all customized charts

--- a/Collaborator.ipynb
+++ b/Collaborator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 146,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
     "    all_learn = list((itertools.chain.from_iterable(big_list1)))\n",
     "    N_learn = Counter(all_learn).values()\n",
     "    \n",
-    "    ratios =  map(truediv,N_learn,N_teach[:-1])\n",
+    "    ratios =  map(truediv,N_learn,N_teach[:-3])\n",
     "    \n",
     "    breakout_pct = .2\n",
     "    N = len(users)\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 147,
    "metadata": {
     "collapsed": false
    },
@@ -129,12 +129,13 @@
     {
      "data": {
       "text/plain": [
-       "array(['GAIA DRI', 'stochastic gradient', 'gaussian processes',\n",
-       "       'databases', 'HTML5, CSS, javascript,GitHub pages', 'autodiff'], \n",
+       "array(['HTML5, CSS, javascript,GitHub pages', 'stochastic gradient',\n",
+       "       'Bayes', ' fisher matrices', 'GAIA DRI', 'science communication',\n",
+       "       'R', 'Fourier Analysis', 'sphinx'], \n",
        "      dtype='|S35')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 148,
    "metadata": {
     "collapsed": false
    },
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 149,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 150,
    "metadata": {
     "collapsed": false
    },
@@ -208,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 151,
    "metadata": {
     "collapsed": false
    },
@@ -219,43 +220,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 152,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "G_new = nx.DiGraph()"
+    "G_new = nx.DiGraph(bgcolor='white')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 153,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "G_new.add_nodes_from(participants)"
+    "G_new.add_nodes_from(participants, style='filled', fillcolor='black', \n",
+    "                     fontcolor='white', fontname='sans-serif', fontsize=24)\n",
+    "G_new.add_node('breakout', shape='rectangle', width=4, height=1, style='filled', fillcolor='black',\n",
+    "              fontcolor='white', fontname='sans-serif', fontsize=30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 154,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "for p in G_new.nodes():\n",
+    "for p in G.nodes():\n",
     "    mappings = assign[p]\n",
     "    for m in mappings.keys():\n",
-    "        G_new.add_edge(p, mappings[m], label=m)"
+    "        G_new.add_edge(p, mappings[m], label=m, style='dotted', fontcolor='red', fontsize=20,\n",
+    "                      fontname='sans-serif')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 158,
    "metadata": {
     "collapsed": false
    },
@@ -263,17 +268,103 @@
     {
      "data": {
       "text/plain": [
-       "'/var/folders/pc/lq5slw9x3f92zfnsfvj0n82h0000gn/T/nx_Rv4jHu.png'"
+       "'0.svg'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pos=nx.spring_layout(G_new)\n",
-    "draw(G_new)"
+    "draw(G_new, filename='0.svg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Customized Graphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "participants = G_new.nodes()\n",
+    "connections = G_new.edges(data=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "index=1\n",
+    "for p in participants:\n",
+    "    con = [c for c in connections if c[0] == p]\n",
+    "    links = [c[1] for c in con]\n",
+    "    links.append(p)\n",
+    "\n",
+    "    H = nx.DiGraph()\n",
+    "    H.add_nodes_from(links, style='filled', fillcolor='black', \n",
+    "                         fontcolor='white', fontname='sans-serif', fontsize=24)\n",
+    "\n",
+    "    for c in con:\n",
+    "        H.add_edge(c[0], c[1], label=c[2]['label'], style='dotted', fontcolor='red', fontsize=12,\n",
+    "                          fontname='sans-serif')\n",
+    "\n",
+    "    draw(H, filename=str(index)+'.svg')\n",
+    "    index+=1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating a Web Page"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from jinja2 import Template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Define jinja2 template\n",
+    "TEMPLATE = Template(\"\"\"<html><body></body><html>{% for i in range(0,index)%}<center><img src=\"{{i}}.svg\" align=\"middle\"></center><br><br><br><br><br><br>{% endfor %}\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('display.html', 'w') as file:\n",
+    "    file.write(TEMPLATE.render(index=index))"
    ]
   }
  ],
