--- a/Collaborator.ipynb
+++ b/Collaborator.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 197,
    "metadata": {
     "collapsed": false
    },
@@ -268,16 +268,16 @@
     {
      "data": {
       "text/plain": [
-       "'0.svg'"
+       "'Resources/0.svg'"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "draw(G_new, filename='0.svg')"
+    "draw(G_new, filename='Resources/0.svg')"
    ]
   },
   {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 192,
    "metadata": {
     "collapsed": false
    },
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 193,
    "metadata": {
     "collapsed": false
    },
@@ -321,7 +321,7 @@
     "        H.add_edge(c[0], c[1], label=c[2]['label'], style='dotted', fontcolor='red', fontsize=12,\n",
     "                          fontname='sans-serif')\n",
     "\n",
-    "    draw(H, filename=str(index)+'.svg')\n",
+    "    draw(H, filename='Resources/'+str(index)+'.svg')\n",
     "    index+=1"
    ]
   },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 194,
    "metadata": {
     "collapsed": true
    },
@@ -345,19 +345,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 195,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Define jinja2 template\n",
-    "TEMPLATE = Template(\"\"\"<html><body></body><html>{% for i in range(0,index)%}<center><img src=\"{{i}}.svg\" align=\"middle\"></center><br><br><br><br><br><br>{% endfor %}\"\"\")"
+    "TEMPLATE = Template(\"\"\"<html><body></body><html>{% for i in range(0,index)%}<center><img src=\"Resources/{{i}}.svg\" align=\"middle\"></center><br><br><br><br><br><br>{% endfor %}\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 196,
    "metadata": {
     "collapsed": false
    },
