Updates graphs and adds a navbar in html

--- a/Collaborator.ipynb
+++ b/Collaborator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -18,12 +18,13 @@
     "from operator import truediv\n",
     "from nxpd import draw\n",
     "from collections import Counter\n",
-    "import itertools"
+    "import itertools\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
@@ -135,7 +136,7 @@
        "      dtype='|S35')"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
@@ -196,11 +197,17 @@
     "                assign_p[l] = 'breakout'\n",
     "            else:\n",
     "                edges = G.edges(p[0], data=True)\n",
+    "                common = []\n",
+    "                \n",
     "                for e in edges:\n",
     "                    if (l in e[2]['common']) and (l!=''):\n",
-    "                        assign_p[l] = e[1]\n",
+    "                        common.append(e[1])\n",
     "                    else: \n",
     "                        pass\n",
+    "                \n",
+    "                if common != []:\n",
+    "                    assign_p[l] = random.choice(common)   \n",
+    "                \n",
     "        assign[p[0]] = assign_p\n",
     "        i+=1\n",
     "        \n",
@@ -209,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
@@ -220,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -245,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -260,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +278,7 @@
        "'Resources/0.svg'"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -301,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -326,6 +333,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'index': 28,\n",
+       " 'participants': ['Vinayak',\n",
+       "  'Dalya',\n",
+       "  'Adrian',\n",
+       "  'Daniela',\n",
+       "  'Kate',\n",
+       "  'Phil',\n",
+       "  'Jonathan',\n",
+       "  'Ben',\n",
+       "  'Usman',\n",
+       "  'Grigor',\n",
+       "  'Zach',\n",
+       "  'Zaki',\n",
+       "  'Jennifer',\n",
+       "  'breakout',\n",
+       "  'Oleg',\n",
+       "  'Casey',\n",
+       "  'Brigitta',\n",
+       "  'Felipe',\n",
+       "  'Jessie',\n",
+       "  'Lucas',\n",
+       "  'Madhura',\n",
+       "  'Layne',\n",
+       "  'Adam',\n",
+       "  'Arna',\n",
+       "  'Dan',\n",
+       "  'Megan',\n",
+       "  'Sophia']}"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj = {}\n",
+    "obj['index'] = index\n",
+    "obj['participants'] = [p.split(' ')[0] for p in participants]\n",
+    "obj"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -334,9 +393,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 138,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -345,26 +404,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 143,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Define jinja2 template\n",
-    "TEMPLATE = Template(\"\"\"<html><body></body><html>{% for i in range(0,index)%}<center><img src=\"Resources/{{i}}.svg\" align=\"middle\"></center><br><br><br><br><br><br>{% endfor %}\"\"\")"
+    "TEMPLATE = Template(\"\"\"<html><head><link rel=\"stylesheet\" href=\"http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css\">\n",
+    "\n",
+    "<!-- jQuery library -->\n",
+    "<script src=\"https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js\"></script>\n",
+    "\n",
+    "<!-- Latest compiled JavaScript -->\n",
+    "<script src=\"http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js\"></script></head>\n",
+    "<body>\n",
+    "<nav class=\"navbar navbar-default\">\n",
+    "  <div class=\"container-fluid\">\n",
+    "    <div class=\"navbar-header\">\n",
+    "      <a class=\"navbar-brand\" href=\"#\">Collaboratr</a>\n",
+    "    </div>\n",
+    "    <ul class=\"nav navbar-nav\">\n",
+    "      <li class=\"active\"><a href=\"#\">Home</a></li>\n",
+    "      <li><a href=\"#0\">Overall</a></li>\n",
+    "      {% for p in obj.participants%}\n",
+    "          <li><a href=\"#{{loop.index}}\">{{p}}</a></li> \n",
+    "      {% endfor %}\n",
+    "    </ul>\n",
+    "  </div>\n",
+    "</nav>\n",
+    "        \n",
+    "{% for i in range(0,obj.index)%}<a name=\"{{i}}\"><br><br><br><br><br><br><center><img src=\"Resources/{{i}}.svg\" align=\"middle\"></center>{% endfor %}<script src=\"jquery/jquery-2.0.3.min.js\"></script>\n",
+    "</body>\n",
+    "</html>\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "with open('display.html', 'w') as file:\n",
-    "    file.write(TEMPLATE.render(index=index))"
+    "    file.write(TEMPLATE.render(obj=obj))"
    ]
   }
  ],
