Adds breakout table

--- a/Collaborator.ipynb
+++ b/Collaborator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 188,
    "metadata": {
     "collapsed": false
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 189,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 190,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 191,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 192,
    "metadata": {
     "collapsed": false
    },
@@ -113,6 +113,8 @@
     "    breakout_pct = .2\n",
     "    N = len(users)\n",
     "    subjects = Counter(all_teach).keys()\n",
+    "    print ratios\n",
+    "    print subjects\n",
     "    isBreakout = (np.array(ratios) > 2) & (np.array(N_learn > breakout_pct*N))\n",
     "    \n",
     "    breakouts = np.array(subjects)[list(np.where(isBreakout)[0])]\n",
@@ -122,28 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 193,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['HTML5, CSS, javascript,GitHub pages', 'stochastic gradient',\n",
-       "       'Bayes', ' fisher matrices', 'GAIA DRI', 'science communication',\n",
-       "       'R', 'Fourier Analysis', 'sphinx'], \n",
-       "      dtype='|S35')"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "breakouts = find_breakouts(teach, learn)\n",
-    "breakouts"
+    "breakouts = ['autodiff', 'GAIA DRI', 'gaussian processes', 'Julia', 'packaging (Python)', 'stochastic gradient']"
    ]
   },
   {
@@ -155,19 +142,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 194,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# Insert users in graphs\n",
     "for u,e,l,t in zip(users, emails, learn, teach):\n",
     "    insert_node(u, email=e, learn=l.split(';'), teach=t.split(';'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 195,
    "metadata": {
     "collapsed": false
    },
@@ -178,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 196,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 197,
    "metadata": {
     "collapsed": false
    },
@@ -227,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 198,
    "metadata": {
     "collapsed": false
    },
@@ -238,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 199,
    "metadata": {
     "collapsed": false
    },
@@ -252,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 200,
    "metadata": {
     "collapsed": false
    },
@@ -267,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 201,
    "metadata": {
     "collapsed": false
    },
@@ -278,7 +266,7 @@
        "'Resources/0.svg'"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 202,
    "metadata": {
     "collapsed": false
    },
@@ -308,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 203,
    "metadata": {
     "collapsed": false
    },
@@ -334,54 +322,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 204,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'index': 28,\n",
-       " 'participants': ['Vinayak',\n",
-       "  'Dalya',\n",
-       "  'Adrian',\n",
-       "  'Daniela',\n",
-       "  'Kate',\n",
-       "  'Phil',\n",
-       "  'Jonathan',\n",
-       "  'Ben',\n",
-       "  'Usman',\n",
-       "  'Grigor',\n",
-       "  'Zach',\n",
-       "  'Zaki',\n",
-       "  'Jennifer',\n",
-       "  'breakout',\n",
-       "  'Oleg',\n",
-       "  'Casey',\n",
-       "  'Brigitta',\n",
-       "  'Felipe',\n",
-       "  'Jessie',\n",
-       "  'Lucas',\n",
-       "  'Madhura',\n",
-       "  'Layne',\n",
-       "  'Adam',\n",
-       "  'Arna',\n",
-       "  'Dan',\n",
-       "  'Megan',\n",
-       "  'Sophia']}"
-      ]
-     },
-     "execution_count": 137,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "obj = {}\n",
     "obj['index'] = index\n",
-    "obj['participants'] = [p.split(' ')[0] for p in participants]\n",
-    "obj"
+    "obj['participants'] = [p.split(' ')[0] for p in participants]"
    ]
   },
   {
@@ -393,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 205,
    "metadata": {
     "collapsed": false
    },
@@ -404,14 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 226,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Define jinja2 template\n",
-    "TEMPLATE = Template(\"\"\"<html><head><link rel=\"stylesheet\" href=\"http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css\">\n",
+    "TEMPLATE1 = Template(\"\"\"<html><head><link rel=\"stylesheet\" href=\"http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css\">\n",
     "\n",
     "<!-- jQuery library -->\n",
     "<script src=\"https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js\"></script>\n",
@@ -441,14 +390,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 227,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "with open('display.html', 'w') as file:\n",
-    "    file.write(TEMPLATE.render(obj=obj))"
+    "    file.write(TEMPLATE1.render(obj=obj))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Breakout Visualizations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "participants = G.nodes(data=True)\n",
+    "\n",
+    "objs = []\n",
+    "for b in breakouts:\n",
+    "    learn = []\n",
+    "    teach = []\n",
+    "    \n",
+    "    for p in participants:\n",
+    "        if b in p[1]['learn']:\n",
+    "            learn.append(p[0].split(' ')[0])\n",
+    "            \n",
+    "        if b in p[1]['teach']:\n",
+    "            teach.append(p[0].split(' ')[0])\n",
+    "       \n",
+    "    \n",
+    "    learn = ', '.join(learn)\n",
+    "    teach = ', '.join(teach)\n",
+    "    o = {}\n",
+    "    o['learn'] = learn\n",
+    "    o['teach'] = teach\n",
+    "    o['name'] = b\n",
+    "    \n",
+    "    objs.append(o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Define jinja2 template\n",
+    "TEMPLATE2 = Template(\"\"\"<html><head><head><link rel=\"stylesheet\" href=\"http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css\">\n",
+    "\n",
+    "<!-- jQuery library -->\n",
+    "<script src=\"https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js\"></script>\n",
+    "\n",
+    "<!-- Latest compiled JavaScript -->\n",
+    "<script src=\"http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js\"></script></head>\n",
+    "<div class=\"container\">\n",
+    "  <h2>Breakouts Table</h2>\n",
+    "  <table class=\"table\">\n",
+    "    <thead>\n",
+    "      <tr>\n",
+    "        <th>Subjects</th>\n",
+    "        <th>Learners</th>\n",
+    "        <th>Teachers</th>\n",
+    "      </tr>\n",
+    "    </thead>\n",
+    "    <tbody>\n",
+    "    {% for i in objs%}\n",
+    "      <tr>\n",
+    "        <td>{{i.name}}</td>\n",
+    "        <td>{{i.learn}}</td>\n",
+    "        <td>{{i.teach}}</td>\n",
+    "      </tr>\n",
+    "    {% endfor %}\n",
+    "    </tbody>\n",
+    "  </table>\n",
+    "</div>\n",
+    "<script src=\"jquery/jquery-2.0.3.min.js\"></script>\n",
+    "</body>\n",
+    "</html>\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('breakouts.html', 'w') as file:\n",
+    "    file.write(TEMPLATE2.render(objs=objs))"
    ]
   }
  ],
