breakout determination now working in py2

--- a/Collaborator.ipynb
+++ b/Collaborator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -24,18 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "BREAKOUT_REQ_RATIO = 2\n",
+    "BREAKOUT_REQ_FRACTION = 0.2\n",
     "G = nx.DiGraph()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -94,43 +96,44 @@
     "    Find subjects which deserve breakouts depending \n",
     "    on student to teach ratios.\n",
     "    \"\"\"\n",
-    "    big_list = []\n",
+    "    big_list_teach = []\n",
     "    for i in range(len(teach)):\n",
-    "        big_list.append(teach[i].split(';'))\n",
+    "        big_list_teach.append(teach[i].split(';'))\n",
     "\n",
-    "    big_list1 = []\n",
+    "    big_list_learn = []\n",
     "    for i in range(len(learn)):\n",
-    "        big_list1.append(learn[i].split(';'))\n",
+    "        big_list_learn.append(learn[i].split(';'))\n",
     "        \n",
-    "    all_teach = list((itertools.chain.from_iterable(big_list)))\n",
-    "    N_teach = Counter(all_teach).values()\n",
+    "    teach_dict = dict(Counter(list((itertools.chain.from_iterable(big_list_teach)))))\n",
+    "    learn_dict = dict(Counter(list((itertools.chain.from_iterable(big_list_learn)))))\n",
     "    \n",
-    "    all_learn = list((itertools.chain.from_iterable(big_list1)))\n",
-    "    N_learn = Counter(all_learn).values()\n",
+    "    common_names = [ n for n in set(teach_dict).intersection(set(learn_dict)) ]\n",
+    "\n",
+    "    teach_dict = {k:teach_dict[k] for k in common_names if k in teach_dict} # Python3\n",
+    "    learn_dict = {k:learn_dict[k] for k in common_names if k in learn_dict} # Python3\n",
     "    \n",
-    "    ratios =  map(truediv,N_learn,N_teach[:-3])\n",
+    "    N_teach = list(teach_dict.values())\n",
+    "    N_learn = list(learn_dict.values())\n",
     "    \n",
-    "    breakout_pct = .2\n",
+    "    ratios =  list(map(truediv,N_learn,N_teach))\n",
+    "\n",
     "    N = len(users)\n",
-    "    subjects = Counter(all_teach).keys()\n",
-    "    print ratios\n",
-    "    print subjects\n",
-    "    isBreakout = (np.array(ratios) > 2) & (np.array(N_learn > breakout_pct*N))\n",
-    "    \n",
+    "    subjects = list(teach_dict.keys())\n",
+    "    isBreakout = (np.array(ratios) > BREAKOUT_REQ_RATIO) & (np.array(N_learn) > BREAKOUT_REQ_FRACTION*N)\n",
     "    breakouts = np.array(subjects)[list(np.where(isBreakout)[0])]\n",
     "    \n",
-    "    return breakouts"
+    "    return list(breakouts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "breakouts = ['autodiff', 'GAIA DRI', 'gaussian processes', 'Julia', 'packaging (Python)', 'stochastic gradient']"
+    "breakouts = find_breakouts(teach,learn)"
    ]
   },
   {
@@ -142,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -155,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -166,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -204,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -215,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -226,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -255,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -266,7 +269,7 @@
        "'Resources/0.svg'"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
